--- a/res/xml/performance.xml
+++ b/res/xml/performance.xml
@@ -48,7 +48,7 @@
             android:persistent="false"
             android:layout="@layout/preference_slider" />
 
-        <com.evervolv.toolbox.preference.SecureSettingSwitchPreference
+        <org.cyanogenmod.support.preference.SecureSettingSwitchPreference
             android:key="app_perf_profiles_enabled"
             android:title="@string/app_perf_profiles_title"
             android:summary="@string/app_perf_profiles_summary"
