--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -22,7 +22,7 @@
     android:key="statusbar_settings"
     android:title="@string/statusbar_settings_title" >
 
-    <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
+    <org.cyanogenmod.support.preference.SystemSettingSwitchPreference
         android:key="status_bar_notif_count"
         android:title="@string/status_bar_notif_count_title"
         android:summary="@string/status_bar_notif_count_summary"
@@ -33,7 +33,7 @@
         android:key="battery_category"
         android:title="@string/battery_category_title">
 
-        <com.evervolv.toolbox.preference.SecureSettingListPreference
+        <org.cyanogenmod.support.preference.SecureSettingListPreference
             android:key="status_bar_battery_style"
             android:title="@string/battery_icon_title"
             android:summary="@string/battery_icon_summary"
@@ -49,7 +49,7 @@
             android:defaultValue="0xffffff"
             android:persistent="false" />
 
-        <com.evervolv.toolbox.preference.SecureSettingListPreference
+        <org.cyanogenmod.support.preference.SecureSettingListPreference
             android:key="status_bar_show_battery_percent"
             android:title="@string/battery_icon_percent_title"
             android:summary="@string/battery_icon_percent_summary"
@@ -59,21 +59,21 @@
             android:defaultValue="0"
             android:persistent="true" />
 
-        <com.evervolv.toolbox.preference.SecureSettingSwitchPreference
+        <org.cyanogenmod.support.preference.SecureSettingSwitchPreference
             android:key="status_bar_battery_style_tile"
             android:title="@string/battery_icon_qs_tile_title"
             android:summary="@string/battery_icon_qs_tile_summary"
             android:defaultValue="true"
             android:persistent="true" />
 
-        <com.evervolv.toolbox.preference.SecureSettingSwitchPreference
+        <org.cyanogenmod.support.preference.SecureSettingSwitchPreference
             android:key="force_charge_battery_text"
             android:title="@string/battery_show_charging_percent_title"
             android:summary="@string/battery_show_charging_percent_summary"
             android:defaultValue="false"
             android:persistent="true" />
 
-        <com.evervolv.toolbox.preference.SecureSettingListPreference
+        <org.cyanogenmod.support.preference.SecureSettingListPreference
             android:key="text_charging_symbol"
             android:title="@string/battery_charging_symbol_title"
             android:summary="%s"
@@ -90,7 +90,7 @@
         android:key="clock_category"
         android:title="@string/clock_category_title">
 
-        <com.evervolv.toolbox.preference.SystemSettingListPreference
+        <org.cyanogenmod.support.preference.SystemSettingListPreference
             android:key="statusbar_clock_am_pm_style"
             android:title="@string/clock_am_pm_style_title"
             android:summary="@string/clock_am_pm_style_summary"
@@ -106,7 +106,7 @@
         android:key="quick_settings_category"
         android:title="@string/quick_settings_category_title">
 
-        <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
+        <org.cyanogenmod.support.preference.SystemSettingSwitchPreference
             android:key="status_bar_quick_qs_pulldown"
             android:title="@string/qs_quick_pulldown_title"
             android:summary="@string/qs_quick_pulldown_summary"
