--- a/res/layout/display_color_calibration.xml
+++ b/res/layout/display_color_calibration.xml
@@ -43,8 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/color_red_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
@@ -66,8 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/color_green_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
@@ -89,8 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/color_blue_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
