--- a/res/layout/display_picture_adjustment.xml
+++ b/res/layout/display_picture_adjustment.xml
@@ -43,8 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/adj_hue_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
@@ -66,8 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/adj_saturation_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
@@ -89,8 +89,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/adj_intensity_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
@@ -112,8 +112,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/adj_contrast_text"
                 android:paddingTop="2dip"
-                evervolv:min="0.20"
-                evervolv:max="1.00"
+                evervolv:minValue="0.20"
+                evervolv:maxValue="1.00"
                 evervolv:defaultValue="1.00"
                 evervolv:digits="4" />
 
