--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -29,8 +29,8 @@
     </declare-styleable>
 
     <declare-styleable name="IntervalSeekBar">
-        <attr name="min" format="float" />
-        <attr name="max" format="float" />
+        <attr name="minValue" format="float" />
+        <attr name="maxValue" format="float" />
         <attr name="defaultValue" />
         <attr name="digits" format="integer" />
     </declare-styleable>
