LiveDisplaySettings: Inject into Settings via IA
 * Simply declare the activity-alias in the manifest and make use
   of the new information architecture for the Setting app to inject
   LiveDisplay settings into Display category.

 * Set intent priority to -2, so that the preference is placed
   two positions bellow top one (right bellow Adaptive Brightness).

Change-Id: Ia743eb198343f69b22771c78f24b4f32929c9143

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -80,7 +80,7 @@
 
     <part android:key="livedisplay"
           android:title="@*evervolv.platform:string/live_display_title"
-          android:fragment="com.evervolv.toolbox.livedisplay.LiveDisplay"
+          android:fragment="com.evervolv.toolbox.livedisplay.LiveDisplaySettings"
           evervolv:xmlRes="@xml/livedisplay" />
 
 </parts-catalog>
