ButtonSettings: Add a RemotePreference for device-specific  panel
 * In case a device provides its own panel for extra buttons
   settings, place it at the bottom of the Button Settings screen.
   Back in N, that used to go directly to the Settings dashboard,
   but no longer makes sense in O.

 * This uses the RemotePreference API to allow the external app
   to update the view and the action for this is:

     "org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS"

Change-Id: If071eaad8061838a7cddea4fe1df3308f2f9ec84

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -15,6 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+               xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
         android:key="button_settings"
         android:title="@string/button_settings_title">
 
@@ -124,11 +125,16 @@
 
     </PreferenceCategory>
 
-    <Preference
-        android:key="extra_keys"
-        android:title="@string/extra_keys_title"
-        android:summary="@string/extra_keys_summary" >
-        <intent android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
-    </Preference>
+    <PreferenceCategory
+        android:key="extras_category"
+        android:title="@string/extras_title" >
+         <evervolv.preference.RemotePreference
+            android:key="additional_buttons"
+            android:title="@string/additional_buttons_title"
+            evervolv:requiresAction="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS">
+            <intent
+                android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
+        </evervolv.preference.RemotePreference>
+     </PreferenceCategory>
 
 </PreferenceScreen>
