--- a/res/layout/switch_bar.xml
+++ b/res/layout/switch_bar.xml
@@ -17,26 +17,27 @@
 */
 -->
 
-<merge xmlns:android="http://schemas.android.com/apk/res/android" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView android:id="@+id/switch_text"
-              android:layout_height="wrap_content"
-              android:layout_width="0dp"
-              android:layout_weight="1"
-              android:layout_gravity="center_vertical"
-              android:maxLines="2"
-              android:ellipsize="end"
-              android:textAppearance="@style/TextAppearance.Switch"
-              android:textColor="?android:attr/textColorPrimary"
-              android:textAlignment="viewStart" />
+    <TextView
+        android:id="@+id/switch_text"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:maxLines="2"
+        android:ellipsize="end"
+        android:textAppearance="@style/TextAppearance.Switch"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="18sp"
+        android:textAlignment="viewStart" />
 
     <com.evervolv.toolbox.widget.ToggleSwitch
         android:id="@+id/switch_widget"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@null"
-            android:theme="@style/ThemeOverlay.SwitchBar.Settings" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:theme="@style/Widget.SwitchBar.Switch" />
 
 </merge>
 
