--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="fab_ripple">#1fffffff</color><!-- 12% white -->
     <color name="fab_shape">?android:attr/colorAccent</color>
 
+    <color name="switch_bar_background">#ff80868B</color>
+
 </resources>
