parts: introduce berry styles
Change-Id: Ifaacc78eed5234cdbe2fd089a06524bdf1193c8f
Signed-off-by: Joey <joey@lineageos.org>

LineageParts: switch to Style API

Change-Id: I3a8497505bf8f7def59654beec92dd2ebfdd057c
Signed-off-by: Joey <joey@lineageos.org>

LineageParts: Update the way OMS records details about overlays

Change-Id: I5809541ea93f5655c31656ab0969ca5995a45066

LineageParts: update for Style APIs updates

- The app that has set the current global style will be
  displayed in the global style preference (unless it was set from
  LineageParts itself).
- Accents list is now built using the API's getTrustedOverlays() method
- Also cleanup unused code

Change-Id: Ib7b1ca978635e568f7f0c147407270e5f588f0f1
Signed-off-by: Joey <joey@lineageos.org>

parts: styles: add support for more dark overlays

Change-Id: I9730419ce6303a0418f84281789084089dc0ae25
Signed-off-by: Joey <joey@lineageos.org>

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -50,4 +50,10 @@
           android:fragment="com.evervolv.toolbox.display.RotationSettings"
           evervolv:xmlRes="@xml/display_rotation" />
 
+    <part android:key="style"
+          android:title="@string/style_title"
+          android:summary="@string/style_summary"
+          android:fragment="com.evervolv.toolbox.style.StylePreferences"
+          evervolv:xmlRes="@xml/style_preferences" />
+
 </parts-catalog>
