--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -43,4 +43,30 @@
         <item>9</item>
     </string-array>
 
+    <string-array name="style_entries" translatable="false">
+        <item>@string/style_global_entry_automatic</item>
+        <item>@string/style_global_entry_time</item>
+        <item>@string/style_global_entry_light</item>
+        <item>@string/style_global_entry_dark</item>
+    </string-array>
+
+    <!-- Global style values -->
+    <string-array name="style_values" translatable="false">
+        <item>0</item> <!-- Based on wallpaper -->
+        <item>1</item> <!-- Based on LiveDisplay -->
+        <item>2</item> <!-- Force light -->
+        <item>3</item> <!-- Force dark -->
+    </string-array>
+
+    <string-array name="dark_overlay_entries" translatable="false">
+        <item>@string/style_dark_overlay_default</item>
+        <item>@string/style_dark_overlay_black</item>
+    </string-array>
+
+    <!-- These should be updated accordingly to the sdk -->
+    <string-array name="dark_overlay_values" translatable="false">
+        <item>com.evervolv.overlay.dark</item>
+        <item>com.evervolv.overlay.black</item>
+    </string-array>
+
 </resources>
