--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -52,5 +52,8 @@
     <dimen name="fab_elevation">12dp</dimen>
     <dimen name="fab_press_translation_z">9dp</dimen>
 
+    <!-- Berry lite -->
+    <dimen name="style_accent_preview">32dp</dimen>
+    <dimen name="style_accent_icon">24dp</dimen>
 </resources>
 
