Toolbox: Add an option to force pre-O apps to use full screen aspect ratio
When an app target pre-O releases, the default max aspect ratio
is 1.86:1 which leads to ugly black areas on devices that have
screens with higher aspect ratio (for example Galaxy S8/S9).

This change adds an option to allow users to change aspect ratio
for pre-O apps to full screen aspect ratio.

Change-Id: I20eeabf140c9d278d21d68675aed856d45b2f78a

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -39,4 +39,10 @@
           android:fragment="com.evervolv.toolbox.input.PowerMenuActions"
           evervolv:xmlRes="@xml/power_menu_settings" />
 
+    <part android:key="long_screen_settings"
+          android:title="@string/long_screen_settings_title"
+          android:summary="@string/long_screen_settings_summary"
+          android:fragment="com.evervolv.toolbox.applications.LongScreenSettings"
+          evervolv:xmlRes="@xml/long_screen_prefs" />
+
 </parts-catalog>
