--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -30,6 +30,12 @@
     <PreferenceCategory
         android:title="@string/status_bar_icons_title">
 
+        <evervolv.preference.SystemSettingSwitchPreference
+            android:key="show_lte_fourgee"
+            android:title="@string/show_lte_fourgee_title"
+            android:summary="@string/show_lte_fourgee_summary"
+            android:defaultValue="false" />
+
         <PreferenceScreen
             android:key="status_bar_icons"
             android:title="@string/status_bar_system_icons_title"
