EVToolbox: update power menu options
 PQ2A.190205.001 brought in a new option for the power menu,
 adding an emergency dialer

Change-Id: I34ed064092115eff34e49cc681bb727d2a0d18c7

--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -45,4 +45,9 @@
         android:title="@string/power_menu_lockdown_title"
         android:defaultValue="false" />
 
+    <CheckBoxPreference
+        android:key="emergency"
+        android:title="@string/power_menu_emergency_title"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
