Toolbox: use StyleInterface where possible
Change-Id: Ia2cdc2a4ec20e480d0c873a93eb38b99a6c62f90

--- a/res/xml/style_preferences.xml
+++ b/res/xml/style_preferences.xml
@@ -16,8 +16,8 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <evervolv.preference.EVSystemSettingListPreference
-        android:key="berry_global_style"
+    <ListPreference
+        android:key="style_global"
         android:icon="@drawable/ic_style_auto"
         android:title="@string/style_global_title"
         android:summary="%s"
@@ -28,8 +28,8 @@
         android:key="style_accent"
         android:title="@string/style_accent_title" />
 
-    <evervolv.preference.EVSystemSettingListPreference
-        android:key="berry_dark_overlay"
+    <ListPreference
+        android:key="style_dark_overlay"
         android:title="@string/style_dark_overlay_title"
         android:summary="%s"
         android:entries="@array/dark_overlay_entries"
