Toolbox: hide battery percent preference based on flag
 Following the frameworks/base change done
 https://github.com/Evervolv/android_frameworks_base/commit/54ff81b81eaa33c8ccc182566e0b33881664d790

Change-Id: Ic2103809208034e021b0f861f4532ccc08242b6b

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -64,7 +64,8 @@
             android:dialogTitle="@string/status_bar_battery_percentage_title"
             android:entries="@array/status_bar_battery_percentage_entries"
             android:entryValues="@array/status_bar_battery_percentage_values"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            evervolv:requiresConfig="@*android:bool/config_battery_percentage_setting_available" />
 
     </PreferenceCategory>
 
