--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -14,10 +14,11 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-               xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
-        android:key="button_settings"
-        android:title="@string/button_settings_title">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
+    android:key="button_settings"
+    android:title="@string/button_settings_title">
 
     <SwitchPreference
         android:key="disable_nav_keys"
