--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -17,6 +17,7 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
     android:key="status_bar_settings"
     android:title="@string/status_bar_title">
 
@@ -36,12 +37,13 @@
             android:summary="@string/show_lte_fourgee_summary"
             android:defaultValue="false" />
 
-        <PreferenceScreen
+        <evervolv.preference.RemotePreference
             android:key="status_bar_icons"
             android:title="@string/status_bar_system_icons_title"
-            android:summary="@string/status_bar_system_icons_summary">
+            android:summary="@string/status_bar_system_icons_summary"
+            evervolv:requiresAction="com.android.settings.action.STATUS_BAR_TUNER">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
-        </PreferenceScreen>
+        </evervolv.preference.RemotePreference>
 
     </PreferenceCategory>
 
