--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -21,7 +21,7 @@
     android:key="status_bar_settings"
     android:title="@string/status_bar_title">
 
-    <evervolv.preference.EVSystemSettingListPreference
+    <ListPreference
         android:key="qs_quick_pulldown"
         android:title="@string/status_bar_quick_qs_pulldown_title"
         android:entries="@array/status_bar_quick_qs_pulldown_entries"
@@ -31,7 +31,7 @@
     <PreferenceCategory
         android:title="@string/status_bar_icons_title">
 
-        <evervolv.preference.SystemSettingSwitchPreference
+        <SwitchPreference
             android:key="show_lte_fourgee"
             android:title="@string/show_lte_fourgee_title"
             android:summary="@string/show_lte_fourgee_summary"
@@ -50,7 +50,7 @@
     <PreferenceCategory
         android:title="@string/status_bar_battery_title">
 
-        <evervolv.preference.EVSystemSettingListPreference
+        <ListPreference
             android:key="status_bar_battery_style"
             android:title="@string/status_bar_battery_style_title"
             android:summary="%s"
@@ -59,7 +59,7 @@
             android:entryValues="@array/status_bar_battery_style_values"
             android:defaultValue="0" />
 
-        <evervolv.preference.SystemSettingListPreference
+        <ListPreference
             android:key="status_bar_show_battery_percent"
             android:title="@string/status_bar_battery_percentage_title"
             android:summary="%s"
