--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -184,6 +184,11 @@
             android:summary="@string/volbtn_music_controls_summary"
             android:defaultValue="true" />
 
+        <SwitchPreference
+            android:key="volume_panel_on_left"
+            android:title="@string/volume_panel_on_left_title"
+            android:summary="@string/volume_panel_on_left_summary" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
