LineageParts: Allow removing livedisplay pref screen with config_enableLiveDisplay
* We can't inject via IA if we want this.

Change-Id: I17103ad116d1d26855fb47fdee1fa6cdc914e053

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -80,6 +80,7 @@
 
     <part android:key="livedisplay"
           android:title="@*evervolv.platform:string/live_display_title"
+          android:summary="@string/live_display_summary"
           android:fragment="com.evervolv.toolbox.livedisplay.LiveDisplaySettings"
           evervolv:xmlRes="@xml/livedisplay" />
 
