Toolbox: Slightly improve package list dialog style
* Add 16dp top padding,
* Make app icon smaller,
* Set more fitting text appearance style,
* Remove divider.

Change-Id: I5d77f83215292f2145e4c2bbeb177dd996f08635

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -55,5 +55,8 @@
     <!-- Berry lite -->
     <dimen name="style_accent_preview">32dp</dimen>
     <dimen name="style_accent_icon">24dp</dimen>
+
+    <!-- Package list dialog -->
+    <dimen name="package_list_padding_top">16dp</dimen>
 </resources>
 
