LineageParts: Add color mode preview from AOSP Settings
Change-Id: Ie69134a7148053e93e3aba528eefd858ae660ccd

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -58,5 +58,7 @@
 
     <!-- Package list dialog -->
     <dimen name="package_list_padding_top">16dp</dimen>
+
+    <dimen name="color_mode_preview_height">320dp</dimen>
 </resources>
 
