--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -36,6 +36,7 @@
 
     <part android:key="power_menu"
           android:title="@string/power_menu_title"
+          android:summary="@string/power_menu_summary"
           android:fragment="com.evervolv.toolbox.input.PowerMenuActions"
           evervolv:xmlRes="@xml/power_menu_settings" />
 
