--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -59,14 +59,11 @@
             android:entryValues="@array/status_bar_battery_style_values"
             android:defaultValue="0" />
 
-        <ListPreference
+        <evervolv.preference.SystemSettingSwitchPreference
             android:key="status_bar_show_battery_percent"
             android:title="@string/status_bar_battery_percentage_title"
-            android:summary="%s"
-            android:dialogTitle="@string/status_bar_battery_percentage_title"
-            android:entries="@array/status_bar_battery_percentage_entries"
-            android:entryValues="@array/status_bar_battery_percentage_values"
-            android:defaultValue="0"
+            android:summary="@string/status_bar_battery_percentage_summary"
+            android:defaultValue="false"
             evervolv:requiresConfig="@*android:bool/config_battery_percentage_setting_available" />
 
     </PreferenceCategory>
