--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -61,10 +61,7 @@
         <item name="android:layout">@layout/preference_material_settings</item>
     </style>
 
-    <style name="PreferenceTheme" parent="@style/PreferenceThemeOverlay.SettingsBase">
-        <item name="preferenceCategoryTitleTextAppearance">@style/TextAppearance.CategoryTitle
-        </item>
-        <item name="preferenceCategoryTitleTextColor">?android:attr/textColorSecondary</item>
+    <style name="PreferenceTheme" parent="@style/PreferenceTheme.SettingsLib">
     </style>
 
     <style name="PreferenceHeaderPanelSinglePane">
