Toolbox: update theme
Change-Id: Id432dd725c7e40edc9f80f85b708f34965a015e4

--- a/res/layout/long_screen_list_item.xml
+++ b/res/layout/long_screen_list_item.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textColor="?android:attr/textColorPrimary"
-            android:textAppearance="@style/TextAppearance.Medium"
+            android:textAppearance="@*android:style/TextAppearance.Material.Medium"
             android:singleLine="true"
             android:ellipsize="marquee" />
 
