--- a/res/drawable/tabs_indicator_background.xml
+++ b/res/drawable/tabs_indicator_background.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014 The Android Open Source Project
+<!--
+     Copyright (C) 2021 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,9 +14,11 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?android:attr/colorControlHighlight">
-    <item android:drawable="?android:attr/colorSecondary" />
-</ripple>
-
+    <solid android:color="?android:attr/textColorSecondaryInverse"/>
+    <corners android:radius="8dp"/>
+    <size android:height="4dp"/>
+</shape>
