--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -16,10 +16,11 @@
 -->
 <resources>
 
+    <!-- launcher icon color -->
+    <color name="icon_launcher_setting_color">@*android:color/accent_device_default_light</color>
+
     <color name="fab_ripple">#1fffffff</color><!-- 12% white -->
     <color name="fab_shape">?android:attr/colorAccent</color>
-
-    <color name="switch_bar_background">#ff80868B</color>
 
     <color name="perf_hot">#ffd10015</color>
     <color name="perf_cold">#ff005994</color>
