--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -15,87 +15,9 @@
 -->
 
 <resources>
-    <attr name="side_margin" format="reference|dimension" />
-    <attr name="wifi_signal_color" format="reference" />
 
-    <!-- Theme with no local references, used by AccountPreferenceBase where we have to inflate
-         layouts against a remote context using our local theme colors. Due to the implementation
-         details of Theme, we can't reference any local resources and MUST instead use the values
-         directly. So use #ff263238 instead of @color/theme_primary and so on. -->
-    <style name="Theme.SettingsBase" parent="@android:style/Theme.DeviceDefault.Settings" />
-
-    <style name="Theme.Settings" parent="Theme.SettingsBase">
-        <item name="preferenceFragmentStyle">@style/PreferenceFragmentStyle</item>
-        <item name="preferenceFragmentListStyle">@style/PreferenceFragmentListSinglePane</item>
-        <item name="preferenceTheme">@style/PreferenceTheme</item>
-
-        <item name="wifi_signal_color">?android:attr/colorAccent</item>
-        <item name="side_margin">@dimen/settings_side_margin</item>
-
-        <!-- Redefine the ActionBar style for contentInsetStart -->
-        <item name="android:actionBarStyle">@style/Theme.ActionBar</item>
-        <item name="android:actionBarSize">@dimen/actionbar_size</item>
-
-        <item name="switchBarTheme">@style/ThemeOverlay.SwitchBar.Settings</item>
-
-        <item name="preferenceBackgroundColor">@drawable/preference_background</item>
-
-        <!-- For all Alert Dialogs -->
-        <item name="alertDialogTheme">@style/Theme.AlertDialog</item>
+    <!-- Material theme for the pages containing TabLayout and ViewPager -->
+    <style name="Theme.TabTheme" parent="@style/Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">@*android:color/edge_effect_device_default_light</item>
     </style>
-
-    <style name="Theme.SubSettings" parent="Theme.Settings">
-        <!-- Redefine the ActionBar style for contentInsetStart -->
-        <item name="actionBarStyle">@style/Theme.ActionBar.SubSettings</item>
-
-        <item name="switchBarTheme">@style/ThemeOverlay.SwitchBar.Settings</item>
-    </style>
-
-    <style name="Theme.ActionBar" parent="@android:style/Widget.Material.ActionBar.Solid">
-        <item name="contentInsetStart">@dimen/actionbar_contentInsetStart</item>
-    </style>
-
-    <style name="Theme.ActionBar.SubSettings" parent="Theme.ActionBar">
-        <item name="contentInsetStart">@dimen/actionbar_subsettings_contentInsetStart</item>
-    </style>
-
-    <style name="ThemeOverlay.SwitchBar.Settings" parent="@android:style/ThemeOverlay.Material.ActionBar">
-        <item name="android:textColorPrimary">@android:color/white</item>
-        <item name="switchBarMarginStart">@dimen/switchbar_subsettings_margin_start</item>
-        <item name="switchBarMarginEnd">@dimen/switchbar_subsettings_margin_end</item>
-        <item name="switchBarBackgroundColor">@color/switch_bar_background</item>
-        <item name="switchBarBackgroundActivatedColor">?android:attr/colorAccent</item>
-    </style>
-
-    <style name="Widget.SwitchBar.Switch" parent="@android:style/Widget.Material.CompoundButton.Switch">
-        <item name="android:trackTint">@color/switchbar_switch_track_tint</item>
-        <item name="android:thumbTint">@color/switchbar_switch_thumb_tint</item>
-    </style>
-
-    <style name="Theme.DialogWhenLarge" parent="@*android:style/Theme.Material.Settings.DialogWhenLarge">
-        <!-- Redefine the ActionBar style for contentInsetStart -->
-        <item name="actionBarStyle">@style/Theme.ActionBar</item>
-
-        <item name="preferenceBackgroundColor">@drawable/preference_background</item>
-    </style>
-
-    <style name="Theme.SubSettingsDialogWhenLarge" parent="Theme.DialogWhenLarge">
-        <item name="preferenceTheme">@style/PreferenceTheme</item>
-        <item name="actionBarWidgetTheme">@null</item>
-        <item name="actionBarTheme">@android:style/ThemeOverlay.Material.ActionBar</item>
-
-        <item name="preferenceBackgroundColor">@drawable/preference_background</item>
-    </style>
-
-    <style name="ThemeOverlay.AlertDialog" parent="@android:style/ThemeOverlay.Material.Dialog.Alert">
-        <item name="android:windowSoftInputMode">adjustResize</item>
-    </style>
-
-    <style name="Theme.AlertDialog" parent="@*android:style/Theme.DeviceDefault.Settings.Dialog.Alert">
-        <item name="android:windowSoftInputMode">adjustResize</item>
-
-        <!-- Redefine the ActionBar style for contentInsetStart -->
-        <item name="android:actionBarStyle">@style/Theme.ActionBar</item>
-    </style>
-
 </resources>
