--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -20,23 +20,29 @@
     android:key="button_settings"
     android:title="@string/button_settings_title">
 
-    <SwitchPreference
-        android:key="disable_nav_keys"
-        android:title="@string/disable_navkeys_title"
-        android:summary="@string/disable_navkeys_summary"
-        android:defaultValue="false" />
+    <PreferenceCategory
+        android:key="capacitive_keys"
+        android:title="@string/capacitive_keys_title" >
 
-    <SwitchPreference
-        android:key="swap_capacitive_keys"
-        android:title="@string/swap_capacitive_keys_title"
-        android:summary="@string/swap_capacitive_keys_summary"
-        android:defaultValue="false" />
+        <SwitchPreference
+            android:key="disable_nav_keys"
+            android:title="@string/disable_navkeys_title"
+            android:summary="@string/disable_navkeys_summary"
+            android:defaultValue="false" />
 
-    <com.evervolv.toolbox.input.ButtonBacklightBrightness
-        android:key="button_backlight"
-        android:title="@string/button_backlight_title"
-        android:dialogTitle="@string/button_backlight_title"
-        android:persistent="false" />
+        <SwitchPreference
+            android:key="swap_capacitive_keys"
+            android:title="@string/swap_capacitive_keys_title"
+            android:summary="@string/swap_capacitive_keys_summary"
+            android:defaultValue="false" />
+
+        <com.evervolv.toolbox.input.ButtonBacklightBrightness
+            android:key="button_backlight"
+            android:title="@string/button_backlight_title"
+            android:dialogTitle="@string/button_backlight_title"
+            android:persistent="false" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="home_key"
