--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -21,17 +21,24 @@
     android:key="status_bar_settings"
     android:title="@string/status_bar_title">
 
-    <ListPreference
-        android:key="qs_quick_pulldown"
-        android:title="@string/status_bar_quick_qs_pulldown_title"
-        android:entries="@array/status_bar_quick_qs_pulldown_entries"
-        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
-        android:defaultValue="0" />
+    <PreferenceCategory
+        android:key="status_bar_quick_settings"
+        android:title="@string/status_bar_quick_settings_title">
+
+        <ListPreference
+            android:key="qs_quick_pulldown"
+            android:title="@string/status_bar_quick_qs_pulldown_title"
+            android:entries="@array/status_bar_quick_qs_pulldown_entries"
+            android:entryValues="@array/status_bar_quick_qs_pulldown_values"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="status_bar_icons"
         android:title="@string/status_bar_icons_title">
 
-        <PreferenceScreen
+        <Preference
             android:key="network_traffic_settings"
             android:title="@string/network_traffic_settings_title"
             android:summary="@string/network_traffic_settings_summary"
@@ -48,6 +55,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="status_bar_battery"
         android:title="@string/status_bar_battery_title">
 
         <ListPreference
