EVToolbox: additional updates to android 12 style
Change-Id: I9eaf3d5580a756ccb56e7757590bbd4b8092277c

--- a/res/xml/battery_light_settings.xml
+++ b/res/xml/battery_light_settings.xml
@@ -18,14 +18,14 @@
         android:key="battery_lights"
         android:title="@string/battery_light_title">
 
+    <com.evervolv.toolbox.widget.EVSystemSettingSwitchPreference
+        android:key="battery_light_enabled"
+        android:title="@string/battery_light_enable_title"
+        android:defaultValue="@bool/def_battery_light_enabled" />
+
     <PreferenceCategory
         android:key="general_section"
         android:title="@string/notification_light_general_title">
-
-        <evervolv.preference.EVSystemSettingSwitchPreference
-            android:key="battery_light_enabled"
-            android:title="@string/battery_light_title"
-            android:defaultValue="@bool/def_battery_light_enabled" />
 
         <evervolv.preference.EVSystemSettingSwitchPreference
             android:key="battery_light_pulse"
