--- a/res/layout/toolbox.xml
+++ b/res/layout/toolbox.xml
@@ -22,6 +22,20 @@
               android:layout_height="match_parent"
               android:layout_width="match_parent">
 
+    <TextView
+        android:id="@+id/top_intro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+        android:paddingBottom="16dp"
+        android:paddingTop="8dp"
+        android:clickable="false"
+        android:longClickable="false"
+        android:maxLines="10"
+        android:visibility="gone"
+        android:textAppearance="@style/TextAppearance.TopIntroText"/>
+
     <com.android.settingslib.widget.MainSwitchBar
         android:id="@+id/main_switch_bar"
         android:visibility="gone"
