--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
      Copyright (C) 2014-2016 The CyanogenMod Project
-     Copyright (C) 2017-2018 The LineageOS Project
+                   2017-2018,2021 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -44,13 +44,12 @@
             android:summary="@string/network_traffic_settings_summary"
             android:fragment="com.evervolv.toolbox.statusbar.NetworkTrafficSettings" />
 
-        <evervolv.preference.RemotePreference
+        <Preference
             android:key="status_bar_icons"
             android:title="@string/status_bar_system_icons_title"
-            android:summary="@string/status_bar_system_icons_summary"
-            evervolv:requiresAction="com.android.settings.action.STATUS_BAR_TUNER">
+            android:summary="@string/status_bar_system_icons_summary">
             <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
-        </evervolv.preference.RemotePreference>
+        </Preference>
 
     </PreferenceCategory>
 
