--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -45,4 +45,10 @@
         android:title="@string/power_menu_emergency_title"
         android:defaultValue="false" />
 
+    <CheckBoxPreference
+        android:key="devicecontrols"
+        android:title="@string/power_menu_devicecontrols_title"
+        android:defaultValue="false"
+        android:enabled="false" />
+
 </PreferenceScreen>
