Toolbox: Adapt changes for EVPreferenceLib
Change-Id: I30c418687d17866835c37614886f1e8c8c195756

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -16,7 +16,6 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform"
     android:key="button_settings"
     android:title="@string/button_settings_title">
 
@@ -206,13 +205,14 @@
     <PreferenceCategory
         android:key="extras_category"
         android:title="@string/extras_title" >
+
          <evervolv.preference.RemotePreference
             android:key="additional_buttons"
-            android:title="@string/additional_buttons_title"
-            evervolv:requiresAction="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS">
+            android:title="@string/additional_buttons_title" >
             <intent
                 android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
         </evervolv.preference.RemotePreference>
+
      </PreferenceCategory>
 
 </PreferenceScreen>
