--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -27,7 +27,7 @@
      the Searchable interface.
 -->
 <parts-catalog xmlns:android="http://schemas.android.com/apk/res/android"
-               xmlns:evervolv="http://schemas.android.com/apk/res/evervolv.platform">
+               xmlns:evervolv="http://schemas.android.com/apk/res-auto">
 
     <part android:key="button_settings"
           android:title="@string/button_settings_title"
