Toolbox: cleanup rotation settings
 Folded under AOSP SmartRotate

Change-Id: I392639aea64d7ed4257961fa0c2b60ec51707391

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -42,6 +42,7 @@
 
     <part android:key="rotation"
           android:title="@string/display_rotation_title"
+          android:summary="@string/display_rotation_summary"
           android:fragment="com.evervolv.toolbox.display.RotationSettings"
           evervolv:xmlRes="@xml/display_rotation" />
 
