--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 The CyanogenMod Project
-                   2017 The LineageOS Project
+                   2017-2023 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -70,5 +70,10 @@
           android:title="@string/live_display_color_profile_title"
           android:fragment="com.evervolv.toolbox.livedisplay.DisplayModePickerFragment"
           evervolv:xmlRes="@xml/display_mode_settings" />
+
+    <part android:key="charging_control"
+          android:title="@string/charging_control_title"
+          android:fragment="com.evervolv.toolbox.health.ChargingControlSettings"
+          evervolv:xmlRes="@xml/charging_control_settings" />
 
 </parts-catalog>
