Revert "EVToolbox: use DropDownPreferences where possible"
This reverts commit f86fe0f9818936ce4c533b1de3820cefdc79af29.

Change-Id: Ied8712ac3173b061f3b1563101aa7aa0a64bcb62

--- a/res/xml/livedisplay.xml
+++ b/res/xml/livedisplay.xml
@@ -21,7 +21,7 @@
             android:key="livedisplay"
             android:title="@string/live_display_color_category_title">
 
-        <DropDownPreference
+        <ListPreference
                 android:key="live_display"
                 android:title="@string/live_display_mode"
                 android:persistent="false" />
