--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -25,7 +25,7 @@
         android:key="status_bar_quick_settings"
         android:title="@string/status_bar_quick_settings_title">
 
-        <DropDownPreference
+        <ListPreference
             android:key="qs_quick_pulldown"
             android:title="@string/status_bar_quick_qs_pulldown_title"
             android:entries="@array/status_bar_quick_qs_pulldown_entries"
@@ -57,7 +57,7 @@
         android:key="status_bar_battery"
         android:title="@string/status_bar_battery_title">
 
-        <DropDownPreference
+        <ListPreference
             android:key="status_bar_battery_style"
             android:title="@string/status_bar_battery_style_title"
             android:summary="%s"
