Toolbox: fix preferences
Change-Id: I022bd85ad1ebe84db4878453caac554a9ba09818

--- a/res/xml/battery_light_settings.xml
+++ b/res/xml/battery_light_settings.xml
@@ -18,7 +18,7 @@
         android:key="battery_lights"
         android:title="@string/battery_light_title">
 
-    <com.evervolv.toolbox.widget.EVSystemSettingSwitchPreference
+    <com.evervolv.settingslib.widget.EVSystemSettingSwitchPreference
         android:key="battery_light_enabled"
         android:title="@string/battery_light_enable_title"
         android:defaultValue="@bool/def_battery_light_enabled" />
