LineageParts: Add MD3 styling to buttons
* Check Profiles -> Add new profile

Change-Id: Ib3b4b0b68b87cd141fb0a55abcad3ac0c4e9e98d

--- a/res/values/bools.xml
+++ b/res/values/bools.xml
@@ -22,5 +22,7 @@
     <bool name="def_battery_light_enabled">true</bool>
     <!-- Default value for battery light pulse -->
     <bool name="def_battery_light_pulse">true</bool>
+    <!-- Default value for edge light pulse -->
+    <bool name="def_edge_light_enabled">false</bool>
 
 </resources>
