--- a/res/layout/toolbox.xml
+++ b/res/layout/toolbox.xml
@@ -54,7 +54,8 @@
                     android:layout_weight="0"
                     android:visibility="gone">
 
-        <Button android:id="@+id/back_button"
+        <Button style="@style/ButtonStyle"
+                android:id="@+id/back_button"
                 android:layout_width="150dip"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dip"
@@ -67,14 +68,16 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true">
 
-            <Button android:id="@+id/skip_button"
+            <Button style="@style/ButtonStyle"
+                    android:id="@+id/skip_button"
                     android:layout_width="150dip"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dip"
                     android:text="@*android:string/skip_button_label"
                     android:visibility="gone"/>
 
-            <Button android:id="@+id/next_button"
+            <Button style="@style/PrimaryButtonStyle"
+                    android:id="@+id/next_button"
                     android:layout_width="150dip"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dip"
