--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -30,4 +30,14 @@
         <item name="android:scrollbarStyle">outsideOverlay</item>
     </style>
 
+    <style name="ButtonStyle" parent="ThemeOverlay.Material3.Button">
+        <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+    </style>
+
+    <style name="PrimaryButtonStyle" parent="ThemeOverlay.Material3.Button">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
