Toolbox: convert network traffic into a part
Change-Id: Ifdf610a60a949b71a80f453a0e2e6bd1566cbe73

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -76,4 +76,9 @@
           android:fragment="com.evervolv.toolbox.health.ChargingControlSettings"
           evervolv:xmlRes="@xml/charging_control_settings" />
 
+    <part android:key="network_traffic"
+          android:title="@string/network_traffic_settings_title"
+          android:fragment="com.evervolv.toolbox.statusbar.NetworkTrafficSettings"
+          evervolv:xmlRes="@xml/network_traffic_settings" />
+
 </parts-catalog>
