--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -60,7 +60,7 @@
             android:entryValues="@array/status_bar_battery_style_values"
             android:defaultValue="0" />
 
-        <SwitchPreference
+        <SwitchPreferenceCompat
             android:key="status_bar_battery_percentage"
             android:title="@string/status_bar_battery_percentage_title"
             android:summary="@string/status_bar_battery_percentage_summary" />
